# normalizacja-liczebnikow

./: .gitignore  README.md  build.ps1  build.sh  post-build-message.txt  pyproject.toml
.github/workflows/: test.yml
normalizacja_liczebnikow/: __init__.py  mappings.py  normalizer.py  parser.py
plans/: how-it-works.md  initial-architecture-design.md
src/: __init__.py  diacritics.py  mappings.py  normalizer.py  parser.py
tests/: __init__.py  test_accusative.py  test_cardinals.py  test_compounds.py  test_dative.py  test_genders.py  test_genitive.py  test_instrumental.py  test_locative.py  test_nominative_only.py  test_normalizer.py  test_ordinals.py  test_polish_edge_cases.py
